# dev-pynonjishokei

./:  example.py  .gitignore  LICENSE  README.ja.md  README.md  example.py  pyproject.toml
src/: main.py
src/pynonjishokei/:  __init__.py  main.py  preprocess.py  scan_for_phrase.py
src/pynonjishokei/db/: nonjishokei.db  query_phrase.py
src/pynonjishokei/rule/: conjugate_rule.json  phrases.json
tests/: test_accuracy.py  test_main.py  test_preprocess.py  test_query_pharse.py  test_scan_for_phrase.py  testaccuracy.py  testmain.py  testpreprocess.py
