[project]
name = "pynonjishokei"
version = "0.0.1"
authors = [
  { name="NoHeartPen", email="NoHeartPen@outlook.com" },
]
description = "A japanese morphological analyzer designed for dictionary retrieval. "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/NoHeartPen/pynonjishokei"
Issues = "https://github.com/NoHeartPen/pynonjishokei/issues"
